# nw-cuda

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  needleman_wunsch.cpp  needleman_wunsch_cuda.cu  needleman_wunsch_cuda.hpp
examples/: align.cpp  score.cpp
include/: aligner.hpp  creator.hpp  cuda.hpp  needleman_wunsch.hpp  parser.hpp  serial.hpp  value.hpp
include/cli/: parser.hpp  result.hpp
include/nw/: aligner.hpp  creator.hpp  cuda.hpp  input.hpp  kernel.cuh  serial.hpp
include/profiler/: align.hpp  base.hpp  creator.hpp  score.hpp
input/: full.txt  simple.txt
src/: creator.cpp  cuda.cu  needleman_wunsch.cpp  parser.cpp  serial.cpp
src/cli/: parser.cpp
src/nw/: aligner.cpp  creator.cpp  cuda.cu  input.cpp  kernel.cu  serial.cpp
src/profiler/: align.cpp  base.cpp  creator.cpp  score.cpp
test/: cuda.cpp  serial.cpp
tests/: cuda.cpp  serial.cpp
tools/: seqgen.py  visualizer.py
utils/: Makefile  seqgen.cpp  seqgen.mk  visualizer.py
